[package]
name = "maelstrom-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
serde_with = "3.12.0"
statsd = "0.16.1"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "broadcast"
path = "src/broadcast.rs"
